# grolprep

./: .gitignore  AUTHORS  LICENSE  README.md  Setup.hs  TODO  changelog.md  fequiz.cabal  fequiz2.cabal  grolprep.cabal  package.yaml  stack.yaml
doc/: hcar-grolprep  hcar-grolprep.tex
doc/dev/: notes
resources/: .htaccess  1.txt  3a.txt  3b.txt  3c.txt  3d.txt  3e.txt  3f.txt  3g.txt  3h.txt  8.txt  fequiz.conf  fequiz.sqlite  grolprep.conf  grolprep.sqlite
resources/css/: common.css  feedback.css  question.css  setup.css
resources/questions/: 3h.txt  8.txt  small1  subelement3a
resources/scripts/: formSetup.js  formStart.js
src/: data-import.hs  fequiz.hs  grolprep.hs
src/Fequiz/: Common.hs  Data.hs  Log.hs  Session.hs  SessionId.hs  Shuffle.hs  Study.hs
src/Fequiz/Common/: Conf.hs  Data.hs  Log.hs  Shuffle.hs  Util.hs
src/Fequiz/Import/: Parse.hs
src/Fequiz/Web/: Feedback.hs  Session.hs  SessionId.hs  Study.hs  Util.hs
src/Grolprep/Common/: Conf.hs  Data.hs  Log.hs  Shuffle.hs  Util.hs
src/Grolprep/Import/: Parse.hs
src/Grolprep/Web/: Database.hs  Feedback.hs  Session.hs  SessionId.hs  Study.hs  Util.hs
src/data-import/: Main.hs
src/data-import/Grolprep/Import/: Parse.hs
src/grolprep/: Main.hs
src/lib/Grolprep/Common/: Conf.hs  Data.hs  Log.hs  Shuffle.hs  Util.hs
src/lib/Grolprep/Web/: Session.hs  Study.hs  Util.hs
util/: install.hs
util/prefs/: boring
util/resources/: new-element1.txt  new-element3.txt  new-element8.txt  newElement1.doc  newElement3.doc  newElement8.doc
util/resources/figures/: 3F16.wmf
