name:                fequiz
version:             1.0.0.4
cabal-version:       >= 1.2
build-type:          Simple
license:             BSD3
license-file:        LICENSE
copyright:           2009 Dino Morelli
author:              Dino Morelli
maintainer:          Dino Morelli <dino@ui3.info>
stability:           experimental
--homepage:            http://foo/bar/baz.html
synopsis:            Foo
description:         Bar Baz
category:            Education
tested-with:         GHC>=6.10.4
data-dir:            resources
data-files:          css/*.css
                     questions/element1, questions/subelement3a,
                     questions/subelement3b, questions/subelement3c,
                     questions/subelement3d, questions/subelement3e,
                     questions/subelement3f, questions/subelement3g,
                     questions/subelement3h, questions/element8,
                     questions/small1

executable           fequiz.cgi
   main-is:          fequiz.hs
   hs-source-dirs:   src
   build-depends:    base >= 3 && < 5, cgi, hslogger, mtl, old-locale, 
                     parsec, regex-compat, time, xhtml
   ghc-options:      -Wall
