name:                fequiz
version:             1.0.1.0
cabal-version:       >= 1.2
build-type:          Simple
license:             BSD3
license-file:        LICENSE
copyright:           2009 Dino Morelli
author:              Dino Morelli
maintainer:          Dino Morelli <dino@ui3.info>
stability:           experimental
homepage:            http://ui3.info/d/proj/fequiz-web.html
synopsis:            FCC Exam Quiz software
description:         This is a web application for studying the FCC 
                     Commercial Radio Operator License questions in 
                     preparation of taking the exams.
category:            Education
tested-with:         GHC>=6.10.4
data-dir:            resources
data-files:          css/*.css, fequiz.conf, fequiz.sqlite

executable           fequiz.cgi
   main-is:          fequiz.hs
   hs-source-dirs:   src
   build-depends:    base >= 3 && < 5, cgi, containers, convertible, 
                     Crypto, directory, filepath, HDBC, HDBC-sqlite3, 
                     hslogger, mtl, old-locale, random, regex-compat, 
                     time, xhtml
   ghc-options:      -Wall
