name:                grolprep
version:             1.0.1.5
cabal-version:       >= 1.2
build-type:          Simple
license:             BSD3
license-file:        LICENSE
copyright:           2009 Dino Morelli
author:              Dino Morelli
maintainer:          Dino Morelli <dino@ui3.info>
stability:           experimental
homepage:            http://ui3.info/d/proj/grolprep.html
synopsis:            FCC GROL examination preparation software
description:         This is a web application for studying for FCC 
                     General Radio Operator License questions (including 
                     the Radar endorsement) in preparation of taking the 
                     exams.
category:            Education
tested-with:         GHC>=6.10.4
data-dir:            resources
data-files:          css/*.css, figures/*.png, grolprep.conf, 
                     grolprep.sqlite, scripts/*.js

executable           fcc-grol-prep.cgi
   main-is:          grolprep.hs
   hs-source-dirs:   src
   build-depends:    base >= 3 && < 5, cgi, containers, convertible, 
                     Crypto, directory, filepath, HDBC, HDBC-sqlite3, 
                     hslogger, HTTP, mtl, network, old-locale, old-time, 
                     random, regex-compat, split, time, xhtml
   ghc-options:      -Wall
