name:                grolprep
version:             1.0.2.7
cabal-version:       >= 1.2
build-type:          Simple
license:             ISC
license-file:        LICENSE
copyright:           2009-2018 Dino Morelli
author:              Dino Morelli
maintainer:          Dino Morelli <dino@ui3.info>
stability:           stable
homepage:            http://hub.darcs.net/dino/grolprep
synopsis:            FCC GROL exam prep web application
description:         This is a web application for studying for FCC 
                     General Radio Operator License questions (including 
                     the Radar endorsement) in preparation of taking the 
                     exams.
category:            Education
tested-with:         GHC>=6.10.4
data-dir:            resources
data-files:          AvionicsPhoto.jpg, BTCAvionicsLogo.jpg, css/*.css, 
                     figures/*.png, grolprep.conf, grolprep.sqlite, 
                     scripts/*.js

source-repository    head
   type:             git
   location:         https://github.com/dino-/grolprep.git

executable           fcc-grol-prep.cgi
   main-is:          grolprep.hs
   hs-source-dirs:   src
   build-depends:      base >= 4.8 && < 5
                     , cgi
                     , containers
                     , convertible
                     , Crypto
                     , directory
                     , filepath
                     , HDBC
                     , HDBC-sqlite3
                     , hsinstall
                     , hslogger
                     , HTTP
                     , mtl
                     , network
                     , network-uri
                     , old-locale
                     , old-time
                     , random
                     , regex-compat
                     , split
                     , time
                     , unix
                     , xhtml
   ghc-options:      -Wall
   other-modules:    Grolprep.Common.Conf
                     Grolprep.Common.Data
                     Grolprep.Common.Log
                     Grolprep.Common.Shuffle
                     Grolprep.Common.Util
                     Grolprep.Web.Database
                     Grolprep.Web.Feedback
                     Grolprep.Web.Session
                     Grolprep.Web.SessionId
                     Grolprep.Web.Study
                     Grolprep.Web.Util
